# Project-gandhi

./: .env  .gitignore  .pre-commit-config.yaml  .pylintrc  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Procfile  STATUS.md  auto.bat  bg.bat  dc.py  ddos.py  gc56.py  gc8ball.py  gcbolcsesseg.py  gcgetbackup.py  gchjelp.py  gckep.py  gcmakebackup.py  gcresetbackup.py  gcset.py  gcstop.py  gcvalassz.py  gfindszerda.py  gset.py  gszerda.py  main.py  msg.csv  msg.py  pyproject.toml  report-1579843729354776796.json  req.txt  requirements.txt  runme.sh  testmilk.py
.github/workflows/: codeql-analysis.yml
