[tool.poetry]
name = "Project-gandhi"
version = "1.2.0"
description = "A discord bot"
authors = ["koviubi56 <>"]
license = "MPL-2.0"
homepage = "https://gandhibot.betteruptime.com/"
keywords = ["python", "discord", "bot", "discord.py", "python3"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.urls]
"Status" = "https://is.gd/GandhiUptime"
"Status 2" = "https://is.gd/GandhiBetter"