[tool.poetry]
name = "repl_python3_Project-gandhi"
version = "0.1.0"
description = ""
authors = ["koviubi56 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.0.1"
discord-components = "^1.0.0"
myelin = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
