[tool.poetry]
name = "repl_python3_Project-gandhi"
version = "0.1.0"
description = ""
authors = ["koviubi56 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
discord-components = "^2.1.2"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
